--- a/css/index.css
+++ b/css/index.css
@@ -56,8 +56,11 @@ video-intro {
     margin-top: 15px;
     text-align: center;
     margin: 0 auto;
+    width: 80%;
+
 }
-.portofolio{
+
+.portofolio {
     display: block;
     width: 275px;
     height: 270px;
@@ -149,8 +152,6 @@ h1 {
     margin: 10px;
 }
 
-/****** Style Star Rating Widget *****/
-
 fieldset,
 label {
     margin: 0;
@@ -162,25 +163,36 @@ h1 {
     margin: 10px;
 }
 
+.logo {
+    display: none;
+}
 
 
-/*
 
-@media (min-width: 300px){
+@media (min-width: 300px) {
     body {
         margin: auto;
         max-width: 970px;
     }
+    header {
+        display: block;
+    }
     .container {
-		margin: 0 auto;
-		max-width: 970px;
-	}
+        margin: 0 auto;
+        max-width: 970px;
+    }
     .lanova {
         display: none;
     }
-    #logo {
-        display: inline-block;
+    .logo {
+        margin: 0 auto;
+        width: 150px;
+        height: 150px;
+    }
+    .logo img {
+        display: block;
         justify-content: center;
+        max-width: 200px;
     }
     .burger-menu {
         display: none;
@@ -188,15 +200,94 @@ h1 {
     nav {
         display: block;
         width: 100%;
-    }  
+    }
     .menu {
         display: flex;
         justify-content: space-around;
         width: 100%;
     }
-    header li{
-*/
 
+    .burger-menu {
+        display: none;
+    }
+    .head {
+        position: relative;
+    }
+
+    .head h3 {
+        opacity: 0.5;
+        font-size: 15px;
+        text-transform: uppercase;
+    }
+
+    .social-networks {
+        display: block;
+        position: absolute;
+        right: 0;
+        bottom: 5px;
+        opacity: 0.5;
+    }
+
+    .social-networks i {
+        padding: 10px;
+    }
+    header ul {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    li {
+        width: 100%;
+        text-align: center;
+    }
+    a:hover {
+        text-decoration: none;
+        color: white;
+    }
+
+    .carousel li:hover {
+        background-color: transparent;
+    }
+
+    li:hover {
+        background-color: black;
+    }
+    h3 {
+        display: none;
+    }
+    .about-us {
+        display: block;
+    }
 }
 
+a {
+    text-decoration: none;
+    color: lightgrey;
+    padding: 10px;
+}
+
+.section {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.section img {
+    max-width: 150px;
+}
+
+.about-us {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.box {
+    display: inline-block;
+    width: 200px;
+    height: 100px;
+    margin: 1em;
+}
+.box img{
+    max-width: 150px;
+    
 }
